applications/n8n/base/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-external-webhooks
spec:
  hostnames:
    - webhooks.sbling.net
  parentRefs:
    - name: external-gateway
      namespace: cilium-system
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
      matches:
        - path:
            type: PathPrefix
            value: /n8n
