applications/n8n/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: n8n
    gethomepage.dev/description: Workflow automation platform
    gethomepage.dev/group: Services
    gethomepage.dev/icon: n8n
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: cilium
  rules:
    - host: &host n8n.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
---
# NOTE: For some reason if we use the same SVC for both Ingress and HTTPRoute,
# it responds with 503, "no healthy upstream"
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/name: n8n
